test/fixtures/syntax-error/bin/abc.js
#! /usr/bin/env node

function function
